more latex fixing code snips not working

--- a/_posts/2023-10-13-file-2.md
+++ b/_posts/2023-10-13-file-2.md
@@ -11,15 +11,10 @@ Add your content here!
 This should be _italic_ and this should be **bold**. This should be ***both***!
 
 # Testing out some latex:
-$$\nabla_\boldsymbol{x} J(\boldsymbol{x})$$
-
-$$\frac{1}{2}$$
-
-What about inline? The Pythagorean theorem is $a^2 + b^2 = c^2$.
+The Pythagorean theorem is $$a^2 + b^2 = c^2$$.
 
 # Testing code snippets:
 
 ```java
 System.out.println("This is a code snippet!");
 ```
-
