code snippets work!

--- a/_posts/2023-10-13-file-2.md
+++ b/_posts/2023-10-13-file-2.md
@@ -16,5 +16,11 @@ The Pythagorean theorem is $$a^2 + b^2 = c^2$$.
 # Testing code snippets:
 
 ```java
-System.out.println("This is a code snippet!");
+
+    public class java {
+        public static void main(String[] args) {
+            System.out.println("Hello World");
+        }
+    }
+
 ```
