--- a/_posts/2023-10-12-file-1.md
+++ b/_posts/2023-10-12-file-1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Example Post 1: Welcome to my space on the Internet!"
+title:  "Markdown Testing"
 date:   2023-10-12 12:32:50 -0700
 tags: [book, review, ux, design]
 
