--- a/_posts/2023-10-13-file-2.md
+++ b/_posts/2023-10-13-file-2.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title:  "Example Post 2: The extraordinarily, ordinary life of myself."
+title:  "Learning a language by reading novels"
 date:   2023-10-13 12:32:50 -0700
 tags: [book, ux]
 
 ---
 Add your content here!
 
-# Testing out formats
+## Testing out formats
 This should be _italic_ and this should be **bold**. This should be ***both***!
 
 # Testing out some latex:
